// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TasksSubList renders correctly Done section 1`] = `
Array [
  <ListSubheader
    disableSticky={true}
  >
    <strong>
      Done
       (
      1
      )
    </strong>
  </ListSubheader>,
  <a
    href="//1"
    onClick={[Function]}
  >
    <TaskCheckbox
      id="1"
      status="UNCOMPLETED"
      title="Call you head manager"
    />
  </a>,
]
`;

exports[`Component - TasksSubList renders correctly Todo section 1`] = `
Array [
  <ListSubheader
    disableSticky={true}
  >
    <strong>
      Todo
       (
      1
      )
    </strong>
  </ListSubheader>,
  <a
    href="//2"
    onClick={[Function]}
  >
    <TaskCheckbox
      id="2"
      status="COMPLETED"
      title="Write you main manager"
    />
  </a>,
]
`;

exports[`Component - TasksSubList renders correctly without tasks and count 1`] = `
<ListSubheader
  disableSticky={true}
>
  <strong>
    Todo
     (
    0
    )
  </strong>
</ListSubheader>
`;
